--- a/builder/Cargo.toml
+++ b/builder/Cargo.toml
@@ -16,4 +16,6 @@ path = "tests/progress.rs"
 trybuild = "1.0"
 
 [dependencies]
-# TODO
+syn = { version="1.0.17", features = ["full", "extra-traits", "visit"] }
+quote = "1.0.3"
+proc-macro2 = "1.0.10"
